# TextEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md
pictures/: text_editor_screenshot.xcf
src/: main.cpp
src/main_window/: main_window.cpp  main_window.h
src/message/: message.cpp  message.h
